--- a/config/database.yml
+++ b/config/database.yml
@@ -28,5 +28,10 @@ test:
 # Similarly, if you deploy your application as a Docker container, you must
 # ensure the database is located in a persisted volume.
 production:
-  <<: *default
-  # database: path/to/persistent/storage/production.sqlite3
+  adapter: postgresql
+  pool: 5
+  database: <%= ENV['DATABASE_NAME'] %>
+  username: <%= ENV['DATABASE_USERNAME'] %>
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+   host: <%= ENV['DATABASE_HOST'] %> # Add this line for external DB connection
+  port: <%= ENV['DATABASE_PORT'] %> # Optional, default is usually 5432
